# DeteksiStuntingML

./: README.md  app.py  model.tflite  notebook_kasar.ipynb  pyproject.toml  requirements.txt
model/: fingerprint.pb  saved_model.pb
model/assets/: 5e3f839d5c0a418adata_spec.pb  5e3f839d5c0a418agradient_boosted_trees_header.pb  5e3f839d5c0a418anodes-00000-of-00001
model/variables/: variables.data-00000-of-00001  variables.index
