[tool.poetry]
name = "stunting-prediction-app"
version = "0.1.0"
description = "A Streamlit app for stunting prediction using TensorFlow Decision Forests."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
streamlit = "*"
tensorflow = "*"
tensorflow-decision-forests = "*"
pandas = "*"
numpy = "*"

[tool.poetry.dev-dependencies]
# Add any development dependencies here if needed

[tool.streamlit]
# Optional Streamlit specific configurations can be added here

[[tool.poetry.source]]
name = "default"
url = "https://pypi.python.org/simple"
secondary = false