[tool.poetry]
name = "stunting-prediction-app"
version = "0.1.0"
description = "A Streamlit app for stunting prediction using TensorFlow Decision Forests."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
streamlit = "^1.24.0"
tensorflow = "^2.13.0"
tensorflow-decision-forests = "^1.5.0"
pandas = "^2.0.0"
numpy = "^1.24.0"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
pytest = "^7.0.0"

[tool.streamlit]
server = { headless = true }