[tool.poetry]
name = "stunting-prediction-app"
version = "0.1.0"
description = "A Streamlit app for stunting prediction using TensorFlow Decision Forests."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"  # Streamlit Cloud mendukung Python 3.10
streamlit = ">=1.24.0"
numpy = ">=1.23.0"
pandas = ">=1.5.0"
tensorflow = ">=2.12.0"
tensorflow-decision-forests = ">=1.5.0"
protobuf = ">=3.20.0"  # Menambahkan protobuf untuk kompatibilitas TensorFlow

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"